<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.photodetails.PhotoDetailsFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp"
            android:backgroundTint="#d9d9d9"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/imageDetail"
                android:src="@drawable/ic_launcher_background"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linear_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/cv_image"
            app:layout_constraintTop_toBottomOf="@id/cv_image">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp">


                <TextView
                    android:id="@+id/likeDetailsTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_star"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:text="@string/like"
                    />

                <TextView
                    android:layout_marginStart="9dp"
                    android:id="@+id/commentDetailsTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/comment"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables"
                android:layout_marginTop="20dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp" />

                <TextView
                    android:id="@+id/user_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_default"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    />


            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

